2007-03-21  Raffaele Sandrini  <rasa@gmx.ch>

	* vala/valaconstant.vala: add '_' between namespace and name of
	  namespace constants' cname

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: minor output enhancements
	* vapi/atk.vala, vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  improve handling of value-types and arrays

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valainterface.vala: support static interfaces
	* vala/valastruct.vala: make set_type_id public
	* vapi/glib-2.0.vala: add GBoxed as interface

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala: use pointer as default of type_id and
	  marshaller_type_name for reference types
	* vala/valapointer.vala: implement get_type_id

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: deep copy GLists if necessary, patch by
	  Mathias Hasselmann
	* vapi/glib-2.0.vala: fix some printf format strings to work on ILP32
	  and LP64 platforms

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: improve support for numeric types, patch by
	  Mathias Hasselmann
	* tests/test-030.vala, tests/test-030.out, tests/test-031.vala,
	  tests/test-031.out: test numeric types
	* tests/testrunner.sh: use c99 and math library
	* tests/Makefile.am: update

2007-03-21  Jürg Billeter  <j@bitron.ch>

	* vala/valainterface.vala: implement marshalling support
	* vala/valacodegenerator.vala: support signals with interface parameters

2007-03-20  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala: add extended runtime type support
	* vala/parser.y: also read property modifiers in set-only properties

2007-03-20  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: add GObject to the list of base types
	* vapi/glib-2.0.vala: add ref and unref methods to GObject

2007-03-20  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala, vala/valasemanticanalyzer.vala,